--- a/tp2/style.css
+++ b/tp2/style.css
@@ -1,95 +1,203 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Source+Sans+Pro&display=swap');
+
+/* debut  */
 *{
-    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body{
-    background-color: aqua;
-    overflow: hidden;
+:root{
+     --body-color:#e4e9f7;
+     --sidebar-color:#242526;
+     --primary-color:#695cfe;
+     --primary-color-light:#f6f5ff;
+     --toggle-color:#ddd;
+     --text-color:#ccc;
+
+     --tran-03:all 0.2s ease ;
+     --tran-03:all 0.3s ease ;
+     --tran-04:all 0.4s ease ;
+     --tran-05:all 0.5s ease ;
+ }
+ body{
+     height: 100vh;
+     background-color: var(--body-color);
+     transition: var(--tran-05);
+ }
+ body.dark{
+    --body-color:#18191a;
+    --sidebar-color:#242526;
+    --primary-color:#3a3b3c;
+    --primary-color-light:#3a3b3c;
+    --toggle-color:#fff;
+    --text-color:#ccc;
+ }
+ .sidebar.close{
+     width: 95px;
+ }
+ .sidebar.close .text{
+     opacity: 0;
+ }
+ .sidebar .text{
+     font-size: 1.5em;
+     font-weight: 500;
+     color: var(--text-color);
+     transition: var(--tran-03);
+     white-space: nowrap;
+     opacity: 1;
+ }
+ .sidebar .image{
+     min-width: 70px;
+     display: flex;
+     align-items: center;
+ }
+ .sidebar{
+     position: fixed;
+     background-color: var(--sidebar-color);
+     height: 100%;
+     width: 300px;
+     padding: 10px 15px;
+     top: 0;
+     left: 0;
+ }
+ .sidebar .image-text img{
+     width: 60px;
+     height: 60px;
+     border-radius: 50%;
+ }
+ .sidebar header .image-text{
+     display: flex;
+     align-items: center;
+ }
+header .image-text .header-text{
     display: flex;
+    flex-direction: column;
 }
-.barre-icon{
-    background-color: white;
-    width: 100px;
-    height: 100vh;
-    padding: 20px 20px;
+.header-text .name{
+    font-weight: 700;
 }
-.infos{
-    display: none;
-    background-color: white;
-    height: 100vh;
-    width: 250px;
-    padding: 20px 20px;
-}
-.barre-info{
-    display: block;
-}
-.menu-profil{
-    height: 10vh;
-    padding: 10px;
+
+.sidebar header .toggle{
+    position: absolute;
+    top: 40px; 
+    right: -25px;
+    transform: translateY(-50%);
+    height: 30px;
+    width: 30px;
+    background: var(--primary-color);
     display: flex;
     justify-content: center;
-}
-.menu-profil small{
-    text-align:center;
-    margin: 20px;
-}
-.menu-profil img{
-    width: 50px;
-    height: 50px;
+    align-items: center;
     border-radius: 50%;
+    color: var(--sidebar-color);
+    font-size: 25px;
 }
-.menu-search{
-    height: 10vh;
-}
-.menu-search input{
-    height: 70%;
-    width: 300px;
-    margin-left: -100px;
-    /* padding: 10px; */
-}
-.menu-dashbord{
-    padding:  20px;
+.sidebar li{
+    height: 50px;
     margin: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+.sidebar li .icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 70px;
+    font-size: 2em;
+}
+.sidebar li .icons,
+.sidebar li .text{
+    color: var(--text-color);
+}
+.sidebar li a{
+    height: 100%;
     width: 100%;
-    /* border-bottom: 2px solid rgba(0, 0, 0, 0.3); */
+    display: flex;
+    align-items: center;
+    text-decoration: none ;
+    transition: var(--tran-04);
 }
-.dash-i{
-    margin: 10px;
+.sidebar .box-search{
+    background-color: var(--primary-color-light);
 }
-.dash-cache{
-    display: none;
-}
-.dash-cacher{
+.box-search input{
+    height: 100%;
     width: 100%;
-    height: 5vh;
-    display:block;
-    padding: 15px;
-    /* border-top: 2px solid rgba(0, 0, 0, 0.3); */
-}
-.layout{
-    border: 1px solid;
-    height: 10vh;
-    padding:  20px;
-    margin: 10px;
+    outline: none;
+    border: none;
+    background-color: var(--primary-color-light);
 }
 
-.char-i{
-    height: 5vh;
-}
-.char-cache{
-    display: none;
-}
-.char-cacher{
-    height: 5vh;
-    display:block;
+.sidebar li a:hover{
+    background-color: var(--primary-color);
 }
 
-.menu-cache button{
-    margin-left: 40px;
+.sidebar li a:hover .icons,.sidebar li a:hover .text {
+    color: var(--sidebar-color);
+
 }
-.menu-burger{
-    max-width: 100%;
-    width: 650px;
-    margin: 0;
+
+.sidebar .menu-bar{
+    
+    height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.sidebar .menu-bar .mode{
+    position: relative;
+   background-color: var(--primary-color-light);
+}
+
+.sidebar .menu-bar .mode i{
+    position: absolute;
+
+}
+.menu-bar .mode .moon-sun{
+    width: 60px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.menu-bar .mode i.sun{
+    opacity: 0;
+}
+
+.menu-bar .mode .toggle-switch{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    min-width: 60px;
+}
+
+.toggle-switch .switch{
+    position: relative;
+    width: 50px;
+    height: 25px;
+    background-color: var(--toggle-color);
+    border-radius:25px ; 
+    cursor: pointer;
+
+}
+.switch::before{
+    content: "";
+    position: absolute;
+    height: 17px;
+    width: 17px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background-color: var(--sidebar-color);
+    transition: var(--tran-03);
+}
+
+body.dark .switch::before{
+     left: 27px;
+
+}
+
