--- a/tp5/style.css
+++ b/tp5/style.css
@@ -49,10 +49,11 @@ main{
 }
 
 .movie {
+    /* box-shadow: 30px 30px 15px 0px white; */
     width: 300px;
-    margin: 1rem;
+    margin: 3rem;
     border-radius: 3px;
-    box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
+    box-shadow: 10px 15px 16px rgba(0,0,0,0.1);
     background-color: var(--secondary-color);
     position:relative;
     overflow: hidden;
@@ -104,7 +105,21 @@ main{
     padding: 1rem;
     max-height: 100%;
     transform:translateY(101%);
-    transition:transform 0.3s ease-in;
+    transition:transform 3s ease-in;
+}
+.movie:hover{
+    animation-name: el;
+    animation-duration: 2s;
+}
+@keyframes el {
+    from{
+        opacity: 0;
+        transform: rotate(0deg);
+    }
+    to{
+        opacity: 0.2;
+        transform: rotate(360deg);
+    }
 }
 
 .movie:hover .overview{
