--- a/Projet_JS_Aly/CSS/style.css
+++ b/Projet_JS_Aly/CSS/style.css
@@ -9,16 +9,40 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
+}
+body.corb .corbeil{
+    transform: translateX(0px);
+}
+body.corb .corbeille{
+    transform: translateX(-250px);
 }
 header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     flex: 1;
     margin: 0;
     padding: 30px;
     font-size: 30px;
     font-weight: bolder;
     background-color:#ecf0f1;
+    transform: translateY(-100%);
+
 }
+header.monte{
+    transform: translateY(0);
+}
+.headd{
+    position: absolute;
+    top: 230px;
+    left: 10px;
+    
+}
+.headd i{
+    font-size: 4rem;
+}
+
 #add{
     font-size: 1em;
     padding: 10px;
@@ -41,9 +65,20 @@ header{
     box-shadow: 5px 5px #597b926c;
     cursor: pointer;
 }
+.corbeil{
+    position: fixed;
+    background-color: #fff;
+    width: 250px;
+    border: solid;
+    right: 0;
+    height: 100%;
+    transform: translateX(250px);
+}
+
 .container{
     flex: 8;
     display: flex;
+    margin: 50px;
 }
 .colonne{
     border: solid;
@@ -56,7 +91,7 @@ header{
     margin:30px ;
 }
 .nameColonne{
-    font-size: 2em;
+    font-size: 1em;
     flex: 1;
     display: flex;
     flex-direction: row-reverse;
@@ -77,7 +112,30 @@ header{
 }
 .conte{
     flex: 9;
+    overflow-y: auto;
 }
+.carte{
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    background-color: #fff;
+    flex: 1;
+    height: 25%;
+    border-radius: 30px;    
+    margin: 15px;
+}
+.carte .teax{
+    border: none;
+    width: 100%;
+    max-width: 100%;
+    height: 98%;
+    max-height: 98%;
+    padding: 5% 0;
+}
+
 .modal{
     visibility: hidden;
     position: absolute;
@@ -92,7 +150,7 @@ header{
 }
 .modal .tache{
     width: 25%;
-    height: 80vh;
+    height: 85%;
     background-color: #fff;
 }
 .titre{
@@ -106,7 +164,8 @@ header{
     font-size: 3em;
 }
 .text_tache{
-    padding: 30px;
+    flex: auto;
+    padding: 1%;
     display: flex;
     flex-direction: column;
 }
@@ -114,43 +173,43 @@ header{
 .tache_area{
     display: flex;
     flex-direction: column;
-    font-size: 2rem;
-    margin: 10px;
+    font-size: 0.8rem;
+    margin: 1%;
 }
-.date{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-    margin: 10px;
+.date + .date_fin{
+    padding: 1%;
+    /* display: flex; */
+    /* flex-direction: column; */
+    font-size: 0.8rem;
+    margin: 1%;
 }
 .debut{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-    margin: 10px;
+    padding: 1%;
+    /* display: flex; */
+    /* flex-direction: column; */
+    font-size: 0.8rem;
+    margin: 2%;
 }
 .fin{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-    margin: 10px;
+    padding: 1%;
+    /* display: flex; */
+    /* flex-direction: column; */
+    font-size: 0.8rem;
+    margin: 2%;
 }
 .but{
-    padding: 10px;
+    padding: 1%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 2rem;
-    margin: 10px;
+    font-size: 0.8rem;
+    margin: 2%;
 }
 .text_tache input{
     width: 70%;
-    height: 50px;
-    margin: 15px;
+    height: 20%;
+    margin: 2%;
 }
 .text_tache button{
     width: 90%;
